# multi-agent-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.py  run.sh
backend/: Dockerfile  example.env  requirements.txt
backend/prompts/: agent_prompts.yaml
backend/src/: api_server.py  logger.py  system.py
backend/src/agents/: __init__.py  base_agent.py  supervisor_agent.py  worker_agents.py
backend/src/api/: __init__.py  dependencies.py  endpoints_backup.py  entrypoint.py
backend/src/api/routes/: __init__.py  agents.py  health.py  tasks.py  websocket.py
backend/src/config/: __init__.py  agent_config.py  settings.py
backend/src/utils/: __init__.py  reporting.py  task_status.py  tools.py
backend/src/workflows/: __init__.py  workflow_manager.py
infrastructure/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
ui/: Dockerfile  __init__.py  example.env  requirements.txt
ui/src/: api_service.py  app.py  app_backup.py  components.py  config.py  page_handlers.py  ui_config.py  websocket_manager.py
